# aoc

./: .pre-commit-config.yaml  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  12.py  13.py  14.py  15.py  18.py  19.py  21.py  24.py  Makefile  README.md  pyproject.toml
2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  24.py
2021/alternative_solutions/: 19.py  19_2.py
2022/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  17.py  18.py
alternative_solutions/: 19.py  19_2.py
code/: 01.py
