[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "Advent of code 2021"
authors = ["Mykolas Blažonis <mykolaas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
