[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "Advent of code 2021"
authors = ["Mykolas Blažonis <mykolaas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.21.4"
advent-of-code-data = "^1.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''